# webapp-spock

./: LICENSE  Main.hs  README.md  Spec.hs  app.cfg  db_dump.sql  shell.nix  stack.yaml  webapp-spock.cabal
src/: App.hs
static/css/: stylesheet.css
test/: Spec.hs
